<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.HomeFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/casesProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/blue_200">

                <ImageView
                    android:id="@+id/covid19cases_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="225dp"
                    android:layout_marginTop="50dp"
                    android:contentDescription="@string/cases_image_discription"
                    android:paddingBottom="20dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/outline_masks_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="100dp"
                    android:gravity="center"
                    android:text="@string/Covid19Cases"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#81C784">

                <ImageView
                    android:id="@+id/vaccination_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="50dp"
                    android:contentDescription="@string/vactination_image_discription"
                    android:paddingBottom="30dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/outline_medical_services_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="100dp"
                    android:gravity="center"
                    android:text="@string/vaccination_count"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>