<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="4dp"
    app:cardCornerRadius="1dp"
    app:cardElevation="8dp"
    android:layout_marginBottom="1dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:orientation="vertical"
        >

    <TextView
        android:id="@+id/vacc_state_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="italic"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="State Name" />

    <TextView
        android:id="@+id/dose1_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/dose_1_text"
        android:textSize="@dimen/count_sp"
        app:layout_constraintBottom_toTopOf="@+id/dose2_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vacc_state_name_text_view" />

    <TextView
        android:id="@+id/dose2_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:textSize="@dimen/count_sp"
        android:text="@string/dose_2_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dose1_text_view" />

    <TextView
        android:id="@+id/population_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/population_text"

        android:textSize="@dimen/count_sp"
        app:layout_constraintStart_toEndOf="@+id/dose1_count_text_view"
        app:layout_constraintTop_toBottomOf="@+id/vacc_state_name_text_view" />

    <TextView
        android:id="@+id/dose1_count_text_view"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/red"

        android:textSize="@dimen/count_sp"
        app:layout_constraintStart_toEndOf="@+id/dose1_text_view"
        app:layout_constraintTop_toBottomOf="@id/vacc_state_name_text_view"
        tools:text="99999999" />

    <TextView
        android:id="@+id/dose2_count_text_view"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/red"
        android:textSize="@dimen/count_sp"

        app:layout_constraintLeft_toRightOf="@id/dose2_text_view"
        app:layout_constraintTop_toBottomOf="@id/dose1_count_text_view"
        tools:text="99999999" />

    <TextView
        android:id="@+id/population_count_text_view"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"

        android:textColor="@color/blue"
        android:textSize="@dimen/count_sp"
        app:layout_constraintLeft_toRightOf="@id/population_text_view"
        app:layout_constraintTop_toBottomOf="@id/vacc_state_name_text_view"
        tools:text="99999999" />

    <TextView
        android:id="@+id/total_vac_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/total_dose_text"
        android:textSize="@dimen/count_sp"
        app:layout_constraintLeft_toRightOf="@id/dose2_count_text_view"
        app:layout_constraintTop_toBottomOf="@id/population_text_view" />

    <TextView
        android:id="@+id/total_count_vac_text_view"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/blue"
        android:textSize="@dimen/count_sp"
        app:layout_constraintLeft_toRightOf="@id/total_vac_text_view"
        app:layout_constraintTop_toBottomOf="@id/population_count_text_view"
        tools:text="99999999" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>